--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -6,6 +6,7 @@ layout: default
   <nav> <a href="/tools"><i class="fas fa-level-up-alt" st></i> Back to Tools</a> <nav>
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <h2>{{page.author}} </h2>
   </header>
 
   <article class="post-content">
