--- a/_sass/_utility.scss
+++ b/_sass/_utility.scss
@@ -1,7 +1,7 @@
 .center {
   display: block;
   margin: 0 auto;
-} 
+}
 
 .blocky {
   position: relative;
@@ -15,7 +15,7 @@
 // Hide for large screens
 @media screen and (min-width:481px) {
     .hide-for-large {
-      display:none 
+      display:none
     }
 }
 
@@ -29,6 +29,10 @@
   background-color: #76a6a6;
 }
 
+.shaded_box{
+  background-color:rgba(3, 31, 115, 0.1)
+}
+
 .pad-lr-15 {
-  padding: 0 15px; 
+  padding: 0 15px;
 }
