Playing around with logo, heading, and new colours. Unsure of the green and blue together.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
 
   {% else %}
 <header role="banner">
-<h1 class="title" style="  width: 100%; text-align:center; color: $uol-blue;font-weight: bold;">{{site.name}}</h1>
+<a  href="{{site.url}}"><img class="logo" src="{{site.logo}}" alt="{{ site.name }} Logo" ></a>
+<h1 class="title" style="width: 100%; text-align:center; font-weight: bold;"><span >Autonomy</span> <span >and</span> <span>Verification</span> <span >Network</span></h1>
 </header>
 {% endif %}
