--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,16 +14,11 @@
   {%else%}
     <meta name="keywords" content="{{ site.keywords }}">
   {% endif %}
-
+  <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
   <link href="{{ site.github.url }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link rel="canonical" href="{{ site.github.url }}{{ page.url }}">
   <link href="{{ site.github.url }}/favicon.ico" rel="icon">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.github.url }}/atom.xml"/>
-
-
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/v4-shims.css">
   {% include metadata.html %}
 
 </head>
