--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,7 @@ p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
+
 }
 
 /**
@@ -98,7 +99,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
-    color: $uol-blue;
+    color: $secondary-color;
 }
 
 
@@ -212,10 +213,10 @@ pre {
 
 /* Title */
 
-.uolLogo {width: 7em; }
-.title {font-size: 1em;}
+.logo {width: 5em; margin: 30px 0px 0px 120px}
+.title {margin: 0cm; font-size: 1em; color: $title-color;}
 
 @media screen and (min-width:500px)  {
-  .uolLogo {width: 15em; }
-  .title{font-size: 3em;}
+  .logo {width: 10em; }
+  .title{font-size: 3em; }
 }
