--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -46,7 +46,7 @@
 	font-family: $navbar-font-family;
 	font-size: $navbar-font-size;
 	font-weight: 700;
-	color: $secondary-color;
+	color: $navbar-text-color;
 	text-transform: uppercase;
 	text-decoration: none;
 
@@ -67,6 +67,9 @@
 // Active state of the links
 #nav>.primary-nav>li.active {
 	background-color: $navbar-active-color;
+	border: 2px solid $navbar-text-color;
+	border-radius: 15px;
+
 }
 
 #nav>.primary-nav>li.dropdown>a {
@@ -138,7 +141,7 @@
 	font-family: $navbar-font-family;
 	font-size: ($navbar-font-size * .92);
 	text-decoration: none;
-	color: $secondary-color;
+	color: $navbar-text-color;
 	font-weight: 400;
 
 	/* Background & effects */
