--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,12 +1,19 @@
-$uol-blue: #031F73;
-$uol-gold: #A17700;
-$uol-black: #1E1E1E;
+//$uol-blue: #031F73;
+//$uol-gold: #A17700;
+//$uol-black: #1E1E1E;
+
+$trafficGreen: #476a4cff;
+$trafficBlue: #135b75ff;
+$trafficYellow: #dd7b00ff;
+$trafficRed: #a83c19;
+$portlandStone: #cec093ff;
 
 // Base Colors
-$primary-color: #272727;
-$secondary-color: $uol-gold;
-$complimentary-color: #fff;
-$body-bg: #fdfdfd;
+$primary-color: $trafficGreen;
+$secondary-color: $trafficBlue;
+$complimentary-color: $trafficYellow;
+$title-color: $primary-color;
+$body-bg: #f4f0bd;
 $body-font-color: #222;
 
 
@@ -24,15 +31,15 @@ $base-line-height: 1.5;
 
 // Primary Navbar Settings
 $navbar-height: 44px;
-$navbar-color: $uol-black;
-$navbar-text-color: $secondary-color;
-$navbar-hover-color: $complimentary-color;
-$navbar-active-color: darken($complimentary-color, 75%);
+$navbar-color: $secondary-color;
+$navbar-text-color: $complimentary-color;
+$navbar-hover-color: lighten($complimentary-color, 50%);
+$navbar-active-color: darken($secondary-color, 15%);
 $navbar-font-size: 14px;
 $navbar-font-family: "Open Sans", Helvetica, Arial, sans-serif;
 
 // Socials Navbar Settings
-$socials-font-color: $secondary-color;
+$socials-font-color: $complimentary-color;
 $socials-font-size: 1.5em;
 
 // Utility
